# chessengine

./: CMakeLists.txt  board.cpp  board.h  main.cpp  movegen.cpp  movegen.h
Walnut-cmake/: .gitmodules  CMakeLists.txt  README.md
Walnut-cmake/Walnut/: CMakeLists.txt
Walnut-cmake/Walnut/src/Walnut/: Application.cpp  Application.h  EntryPoint.h
Walnut-cmake/Walnut/src/Walnut/Input/: Input.cpp  Input.h  KeyCodes.h
engine/: board.cpp  board.h  movegen.cpp  movegen.h  oldsearch.cpp  oldsearch.h  openingbook.cpp  openingbook.h  piecesquaretable.cpp  piecesquaretable.h  san.cpp  san.h  search.cpp  search.h  transpositiontable.cpp  transpositiontable.h  zobrist.cpp  zobrist.h
engine/old/: oldsearch.cpp  oldsearch.h
imgui/: imgui_impl_opengl3_loader.h
ui/: BoardWindow.cpp  BoardWindow.h  font.embed  gui.cpp  gui.h  window.cpp  window.h
util/: arrayvec.h
